<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/txtReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:fontFamily="casual"
        android:textSize="40sp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp" />

    <TextView
        android:text="@string/txtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/txtUser" />

    <TextView
        android:text="@string/textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtPassword" />

    <Button
        android:text="@string/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnReg" />
</LinearLayout>