<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.andorid.mblacher.safemode.MainActivity">

    <TextView
        android:text="@string/txtProductos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:fontFamily="casual"
        android:textSize="30sp"
        android:textAlignment="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp" />

    <TextView
        android:text="@string/txtMarcasCel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:textSize="20sp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cmbMarcas"
        android:layout_below="@+id/textView8"/>

    <TextView
        android:text="@string/txtModelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:layout_below="@+id/cmbMarcas"
        android:textSize="20sp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cmbModelo"
        android:layout_below="@+id/textView9"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtSaludoUser"
        android:layout_below="@+id/cmbModelo"/>

    <Button
        android:text="@string/txtBajaUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ModifcarUser"
        android:layout_toEndOf="@+id/txtSaludoUser"
        android:layout_below="@+id/txtSaludoUser"/>

    <Button
        android:text="@string/txtModUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bajaUser"
        android:layout_marginTop="59dp"
        android:layout_alignTop="@+id/ModifcarUser"
        android:layout_alignEnd="@+id/ModifcarUser" />

</RelativeLayout>
