<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <ImageView
        android:layout_width="224dp"
        android:layout_height="185dp"
        app:srcCompat="@drawable/logo"
        android:id="@+id/imageView"
        android:baselineAlignBottom="false"
        android:textAlignment="center"
        android:layout_marginTop="48dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="61dp"
        android:id="@+id/btnLogin"
        android:layout_alignStart="@+id/imageView"
        android:layout_alignEnd="@+id/imageView" />

    <Button
        android:text="@string/btnRegistrer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegister1"
        android:layout_below="@+id/btnLogin"
        android:layout_marginTop="39dp"
        android:layout_alignEnd="@+id/btnLogin"
        android:layout_alignStart="@+id/btnLogin" />

    <Button
        android:text="@string/btnAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAbout"
        android:layout_below="@+id/btnRegister1"
        android:layout_marginTop="39dp"
        android:layout_alignEnd="@+id/btnLogin"
        android:layout_alignStart="@+id/btnLogin" />


</RelativeLayout>